test/users/thom/passStrRngToNonstrRng.good
test/users/thom/passStrRngToNonstrRng.chpl:5: error: unresolved call 'foo(range(int,bounded,true))'
test/users/thom/passStrRngToNonstrRng.chpl:1: note: candidates are: foo(x: range(int,bounded,false))
