test/users/thom/passStrRngToNonstrRng.chpl
proc foo(x: simpleRange) {
  writeln("x is: ", x);
}

foo(150..250 by 50);
